tsc transpile with commonjs

--- a/src/descriptor_runner/tsconfig.json
+++ b/src/descriptor_runner/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "moduleResolution": "node",
         "target": "es2017",
+        "module": "commonjs",
         "strictNullChecks": true,
         "lib": [
             "es2017",
